<!--suppress XmlUnusedNamespaceDeclaration -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:id="@+id/scrollView"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cv"
            >
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:id="@+id/imageView"
                android:src="@drawable/photo2"
                android:contentDescription="@string/one_leg_stand"
                tools:ignore="ObsoleteLayoutParam" />
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_unsplash"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/photographer"
                    android:id="@+id/textView" />
            </LinearLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cv"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:paddingRight="16dp"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded,RtlSymmetry">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/noneBtn"
                android:layout_column="0"
                android:layout_row="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center"
                android:id="@+id/centerBtn"
                android:layout_column="0"
                android:layout_row="2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_crop"
                android:id="@+id/centerCropBtn"
                android:layout_column="0"
                android:layout_row="3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_inside"
                android:id="@+id/centerInsideBtn"
                android:layout_column="0"
                android:layout_row="4" />

            <Space
                android:layout_row="0"
                android:layout_column="1"
                android:layout_width="50dp"
                android:layout_rowSpan="4"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_center"
                android:id="@+id/fitCenterBtn"
                android:layout_row="0"
                android:layout_column="2" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_end"
                android:id="@+id/fitEndBtn"
                android:layout_row="1"
                android:layout_column="2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_start"
                android:id="@+id/fitStartBtn"
                android:layout_column="2"
                android:layout_row="2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_xy"
                android:id="@+id/fitXYBtn"
                android:layout_column="2"
                android:layout_row="3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matrix"
                android:id="@+id/matrixBtn"
                android:layout_column="2"
                android:layout_row="4" />
        </GridLayout>
</LinearLayout>
    </ScrollView>



</FrameLayout>
